fix top arrow alignment and ipad spacing

--- a/website-guts/assets/css/layouts/opticon.scss
+++ b/website-guts/assets/css/layouts/opticon.scss
@@ -39,6 +39,7 @@
     top: 0;
     padding-top: 18px;
     border-left: 1px solid $brand-blue;
+    text-align: center;
   }
   .cta-text {
     transition: all 0.5s ease-out;
